--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ def materialVersion = "1.5.0-alpha04"
 def butterknifeVersion = "10.2.0"
 def dbflowVersion = "4.2.4"
 def glideVersion = "4.10.0"
+def circleimageviewVersion = "3.1.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -41,6 +42,7 @@ dependencies {
     implementation "com.github.Raizlabs.DBFlow:dbflow:${dbflowVersion}"
     implementation "com.jakewharton:butterknife:${butterknifeVersion}"
     implementation "com.github.bumptech.glide:glide:${glideVersion}"
+    implementation "de.hdodenhof:circleimageview:${circleimageviewVersion}"
 
     annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflowVersion}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
